<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_launcher_name">File Manager</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="go_to_home_folder">Go to home folder</string>
    <string name="set_as_home_folder">Set as home folder</string>
    <string name="home_folder_updated">Home folder updated</string>
    <string name="copy_path">Copy path to clipboard</string>
    <string name="path_copied">Path copied</string>
    <string name="select_audio_file">Please select an audio file</string>
    <string name="search_folder">Search folder</string>
    <string name="rooted_device_only">This operation works only on rooted devices</string>
    <string name="recents">Recents</string>
    <string name="show_recents">Show recents</string>
    <string name="invert_colors">Invert colors</string>

    <!-- Open as -->
    <string name="open_as">Open as</string>
    <string name="text_file">Text file</string>
    <string name="image_file">Image file</string>
    <string name="audio_file">Audio file</string>
    <string name="video_file">Video file</string>
    <string name="other_file">Other file</string>

    <!-- Compression -->
    <string name="compress">Compress</string>
    <string name="decompress">Decompress</string>
    <string name="compress_as">Compress as</string>
    <string name="compressing">Compressing…</string>
    <string name="decompressing">Decompressing…</string>
    <string name="compression_successful">Compression successful</string>
    <string name="decompression_successful">Decompression successful</string>
    <string name="compressing_failed">Compressing failed</string>
    <string name="decompressing_failed">Decompressing failed</string>

    <!-- Favorites -->
    <string name="manage_favorites">Manage favorites</string>
    <string name="go_to_favorite">Go to favorite</string>
    <string name="add_favorites">Add favorites</string>
    <string name="favorites_activity_placeholder">You can add frequently used folders to favorites for easy access from anywhere.</string>

    <!-- File Editor -->
    <string name="file_editor">File Editor</string>

    <!-- Storage analysis -->
    <string name="storage_analysis">Storage analysis</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audio">Audio</string>
    <string name="documents">Documents</string>
    <string name="downloads">Downloads</string>
    <string name="archives">Archives</string>
    <string name="others">Others</string>
    <string name="storage_free">free</string>
    <string name="total_storage">Total storage: %s</string>

    <!-- Settings -->
    <string name="enable_root_access">Enable root access</string>
    <string name="press_back_twice">Require pressing Back twice to leave the app</string>
    <string name="network_folders">Network folders</string>
    <string name="network_folders_placeholder">You can add network folders (SMB, FTP, etc.) here for easy access.</string>
    <string name="add_network_folder">Add network folder</string>
    <string name="name">Name</string>
    <string name="path">Path</string>

    <!-- Network Folder Dialog -->
    <string name="smb">SMB</string>
    <string name="ftp">FTP</string>
    <string name="ip_address">IP address</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="domain_optional">Domain (optional)</string>
    <string name="password">Password</string>
    <string name="share">Share</string>
    <string name="base_folder_optional">Base folder (optional)</string>

    <!-- SMB -->
    <string name="scan_smb">Scan SMB</string>
    <string name="smb_credentials">SMB credentials</string>
    <string name="smb_scan_status">Found %1$d • Scanned %2$d/%3$d</string>
    <string name="no_shares_found">No shares found</string>
    <string name="not_supported_yet">Not supported yet</string>
    <string name="downloading">Downloading…</string>
    <string name="device_storage">Device storage</string>
    <string name="network_folder">Network folder</string>
    <string name="no_network_folders">No network folders added</string>
    <string name="select_here">Select here</string>
    <string name="select_folder">Select folder</string>
    <string name="coming_soon">Coming soon</string>
    <string name="loading">Loading…</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="copy_debug_log">Copy debug log</string>
    <string name="debug_log_copied">Debug log copied</string>

    <!--
        Haven't found some strings? There's more at
        https://github.com/FossifyOrg/Commons/tree/master/commons/src/main/res
    -->
</resources>
