<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <org.fossify.commons.views.MyTextView
        android:id="@+id/smb_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold" />

    <org.fossify.commons.views.MyEditText
        android:id="@+id/smb_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:hint="@string/username"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/bigger_text_size" />

    <org.fossify.commons.views.MyEditText
        android:id="@+id/smb_domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:hint="@string/domain_optional"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/bigger_text_size" />

    <org.fossify.commons.views.MyEditText
        android:id="@+id/smb_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/bigger_text_size" />

</LinearLayout>

