<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <ProgressBar
        android:id="@+id/smb_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <org.fossify.commons.views.MyTextView
        android:id="@+id/smb_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:visibility="gone" />

    <org.fossify.commons.views.MyTextView
        android:id="@+id/smb_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <org.fossify.commons.views.MyEditText
        android:id="@+id/smb_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/bigger_text_size" />

    <org.fossify.commons.views.MyEditText
        android:id="@+id/smb_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:hint="@string/share"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/bigger_text_size" />

    <org.fossify.commons.views.MyEditText
        android:id="@+id/smb_base_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:hint="@string/base_folder_optional"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/bigger_text_size" />

</LinearLayout>
